--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		<section id="one" class="wrapper style1 special">
 			<div class="inner">
 				<header class="major">
-					<h2>Digital Products, Web Design & Branding</h2>
-					<p>Helping your brand grow through visual design direction
+					<h2 class="text-light">Digital Products, Web Design & Branding</h2>
+					<p class="text-light">Helping your brand grow through visual design direction
 						and illustration.</p>
 				</header>
 				<ul class="icons major">
@@ -79,7 +79,7 @@
 					</li>
 					<li>
 						<span class="">
-							<img src="/assets/css/images/responsive-web-design.svg" alt="" height="100px">
+							<img src="/assets/css/images/responsive-webdesign-icon.svg" alt="" height="100px">
 							<span class="label"></span>
 						</span>
 					</li>
