--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<!-- Banner -->
 		<section id="banner">
-			<div class="inner">
+			<div class="inner text-light">
 				<h2>
 					<img style="max-width: 80%;width:300px;margin:2vw"
 						src="/images/studio-theron-logo-L-white-on-transp.png" alt="">
