Updated header txt color

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 
 		<!-- Banner -->
 		<section id="banner">
-			<div class="inner text-light">
+			<div class="inner">
 				<h2>
 					<img style="max-width: 80%;width:300px;margin:2vw"
 						src="/images/studio-theron-logo-L-white-on-transp.png" alt="">
 				</h2>
-				<p>Boutique Design Agency<br> For High Quality Creative Work</p>
+				<p class="text-light">Boutique Design Agency<br> For High Quality Creative Work</p>
 				<ul class="actions special">
 					<li>
 						<a href="/contact.html" class="button primary">Get in touch</a>
 					</li>
 				</ul>
 			</div>
-			<a href="#one" class="more scrolly">What We Do</a>
+			<a class="text-light" href="#one" class="more scrolly">What We Do</a>
 		</section>
 
 		<!-- One -->
