--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</li>
 				</ul>
 			</div>
-			<a class="text-light" href="#one" class="more scrolly">What We Do</a>
+			<a href="#one" class="more scrolly text-light">What We Do</a>
 		</section>
 
 		<!-- One -->
