--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<header class="major">
 					<h2 class="text-light">Digital Products, Web Design & Branding</h2>
 					<p class="text-light">Helping your brand grow through visual design direction
-						and illustration.  We also assist with domain and hosting solutions through our trusted and proven service providers.</p>
+						and illustration.<br> We also assist with domain and hosting solutions through our trusted and proven service providers.</p>
 				</header>
 				<ul class="icons major">
 					<li>
